# rozen

./: .gitignore  Cargo.toml  compression.md  features.md  todo.md  weed.sh
docs/: api.md  break-even.md  compression.md  dynamo.md  features.md  format.md  manifest.md  notes.md  phone.md  rozen-notes.md  size.md  todo.md
docs/data/: compression.md
docs/feature/: file-hash.md
docs/hexpat/: HeaderIdx.hexpat  LtvcBlock.hexpat
docs/old/: apple-archive.md  apple-lambda.md  apple-notes.md  cas-layers.md  lsm-data-layout.md
rarc/: Cargo.toml
rarc/src/: pack.rs
rarc/src/ltvc/: builder.rs  indexing.rs  linear.rs  raw.rs  reader.rs
rcore/: Cargo.toml
rcore/src/: crypto.rs  hash.rs
remote/: Cargo.toml
remote/src/: lib.rs  s3.rs  sql.rs
rozarc/: Cargo.toml
rozarc/src/: lib.rs  logical.rs
rozbin/: Cargo.toml
rozbin/src/: cli.rs  main.rs
rozen/: Cargo.toml
rozen-bin/: Cargo.toml
rozen-bin/src/: cli.rs  main.rs
rozen-tui/: Cargo.toml
rozen-tui/src/: main.rs
rozen/src/: cas.rs  lib.rs  log.rs  snapshot.rs  sql.rs
rozen/src/rarc/: mod.rs  pack.rs
rozen/src/rarc/ltvc/: builder.rs  indexing.rs  linear.rs  mod.rs  raw.rs  reader.rs
rozen/src/rcore/: buf.rs  crypto.rs  hash.rs  key.rs  mod.rs
rozen/src/remote/: mod.rs  s3.rs  sql.rs
roztui/: Cargo.toml
src/: append.rs  backend_mem.rs  buf.rs  cas.rs  chunk.rs  cli.rs  crypto.rs  hash.rs  index.rs  key.rs  lib.rs  ltvc.rs  main.rs  mapper.rs  pack.rs  snapshot.rs  sql.rs
src/backend/: mem.rs  mod.rs  s3.rs
src/engine/: append_only.rs  mod.rs
src/ltvc/: builder.rs  indexing.rs  linear.rs  mod.rs  raw.rs  reader.rs
src/remote/: mem.rs  mod.rs  s3.rs
