[package]
name = "rozen-bin"
version = "0.1.0"
authors = ["Anja Berens <pharaun666@gmail.com>"]
edition = "2021"

[workspace]

[features]
default = ["sql"]
s3 = ["remote/s3"]
sql = ["remote/sql"]

[dependencies]
# Core dependencies
rcore = { path = "rcore" }

# Archive builder library
rarc = { path = "rarc" }

# Backend - Disk/S3/Etc
remote = { path = "remote" }

# Rozen
rozen = { path = "rozen" }

# FS Walker
ignore = "0.4"

# File Index
tempfile = "3"

# Time library
time = { version = "0.3", features = ["formatting"] }

# Configuration
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Logger
log = "0.4"
env_logger = "0.11"
