[package]
name = "rarc"
version = "0.1.0"
authors = ["Anja Berens <pharaun666@gmail.com>"]
edition = "2021"

[dependencies]
# Core dependencies
rcore = { path = "../rcore" }

# Compressor
zstd = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
byteorder = "1"

# Serialization of the idx for archives
hex = "0.4"
bincode = { version = "2.0", features = ["serde"] }
ciborium = "0.2"
rmp = "0.8"
rmp-serde = "1.3"
binrw = "0.14"
bcs = "0.1.6"
borsh = { version = "1.5", features = ["derive"] }

# Error layer for handling error creation
thiserror = "2"

# Logger
log = "0.4"
