[package]
name = "rarc"
version = "0.1.0"
authors = ["Anja Berens <pharaun666@gmail.com>"]
edition = "2021"

[dependencies]
# Core dependencies
rcore = { path = "../rcore" }

# Compressor
zstd = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
byteorder = "1"

# Serialization of the idx for archives
bincode = { version = "2.0", features = ["serde"] }

# Replacement serialization of the idx for archives
binrw = "0.14"
integer-encoding = "4.0.2"

# Binary string debugging
hex = "0.4"

# Error layer for handling error creation
thiserror = "2"

# Logger
log = "0.4"
