[package]
name = "rcore"
version = "0.1.0"
authors = ["Anja Berens <pharaun666@gmail.com>"]
edition = "2021"

[dependencies]
# Hasher
blake3 = "1"

# Encryption -> libsodium-sys-stable = "1.22.2"
sodiumoxide = "0.2.7"
#hex = "0.4"

# Configuration
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
twox-hash = "2"

# Error layer for handling error creation
thiserror = "2"
